27.0.19
-------

27.0.18
-------
(RB=1647191)
Add removeNulls utility in DataMapUtils.

27.0.17
-------
(RB=1653521)
Don't invoke startMap and startList with null values since the normalization code in pemberly-api is overriding these methods and craps out with NPE on encountering a null parameter

27.0.16
-------
(RB=1639026)
Fixing error in CertificateHandler which was sending the message even if the handshake was failing, hiding the real SSL error
Adding cipher suite information to the server side's context

(RB=1642129)
Update ErrorResponse schema for error standardization

(RB=1641262)
Migrate Pegasus tests from Groovy to Java.

27.0.15
-------
(RB=1630415)
Include TypeInfo when adding compound key parts.

27.0.14
-------
(RB=1633001)
Guard against implementations of ProjectionDataMapSerializer returning null

27.0.13
-------
(RB=1630629)
Nuke option to force wildcard, and instead add in an option to pass in a custom projection mask param to mask tree data map serializer

27.0.12
-------
(RB=1621349)
added RestLiInfo.

27.0.11
-------
(RB=1619439)
Allow ' in the line style comment in PDL.

27.0.10
-------
(RB=1620347)
Restrict API in request to only allow forcing wildcard projections

27.0.9
------
(RB=1619727)
Make request options settable on the request. Remove the ability to set force wildcard projections on the requestOptions object since doing so may inadvertently cause shared final constant requestOptions objects to be modified, leading toside effects

27.0.8
------
(RB=1617105)
Add request option to override projections to wildcard

27.0.7
------
(RB=1611904)
Added remove query param support in AbstractRequestBuilder

27.0.6
------
(RB=1604462)
Update R2 REST Client to send RFC 6265 compliant cookie headers during HTTP/1.1 requests

(RB=1606595)
Update docgen to include the symbols for Enum types.

27.0.5
------
(RB=1595492)
Properly encoding empty datamap property value in PDL, and fix PDL nested properties parsing bug

(RB=1594513)